--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,11 @@ path = "src/main.rs" # Path to the main binary file
 axum = { version = "0.6", features = ["multipart"] }
 bytes = "1"
 futures-util = "0.3"
-tokio = { version = "1", features = ["full"] } # For asynchronous runtime
+tokio = { version = "1", features = ["full", "test-util"] } # For asynchronous runtime
 warp = "0.3" # Web framework
 handlebars = "4.3" # Handlebars template rendering
 mrml = "2"
 select = "0.5" # HTML parser library
 serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
 serde_json = "1.0" # For JSON parsing
+hyper = "0.14"
